Bug 973385 - Instantbird doesn't build on Linux, r=clokep.